--- a/src/assets/css/card.css
+++ b/src/assets/css/card.css
@@ -15,3 +15,9 @@ img {
   font-weight: bold;
   margin-right: 5px;
 }
+
+.filter-chip {
+  float: left;
+  margin-bottom: 5px !important;
+  margin-right: 5px !important;
+}
